--- a/5. ToDoJS/style.css
+++ b/5. ToDoJS/style.css
@@ -9,3 +9,79 @@ body {
     color: #f1f1f1;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+h1{
+    text-align: center;
+    padding-top: 50px;
+    font-size: 80px;
+    padding-bottom: 50px;
+}
+
+form{
+    display: block;
+    margin: 0 auto;
+    width: 70%;
+    max-width: 1200px;
+    min-width: 400px;
+}
+
+form label{
+    display: block;
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+
+form input{
+    width: 100%;
+    padding: 20px;
+    font-size: 20px;
+    
+}
+
+form button{
+    width: 40%;
+    padding: 10px;
+    font-size: larger;
+    margin-top: 15px;
+}
+.liste-todo{
+    list-style-type: none;
+    margin: 20px auto 0;
+    width: 70%;
+    max-width: 1200px;
+    min-width: 400px;
+}
+
+li{
+    font-size: 15px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+
+li input{
+    width: 40px;
+    height: 40px;
+    margin-left: 15px;
+}
+
+li button{
+    margin-left: auto;
+    padding: 5px;
+  
+}
+
+button img{
+    width: 40px;
+}
+
+li span{
+    font-size: 25px;
+    margin-left: 20px;
+}
+
+li.finDeTache span{
+    text-decoration: line-through;
+    
+}
