--- a/5. ToDoJS/style.css
+++ b/5. ToDoJS/style.css
@@ -74,6 +74,7 @@ li button{
 
 button img{
     width: 40px;
+    pointer-events: none;
 }
 
 li span{
@@ -83,5 +84,5 @@ li span{
 
 li.finDeTache span{
     text-decoration: line-through;
-    
+
 }
